add font  and  add viewModels and dateConvertor

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,14 @@
 }
 <html>
 <head>
+
+
+    <link rel="stylesheet" href="~/fullCalandar.styles.css" asp-append-version="true" />
+
+    <link href='~/css/main.min.css' rel='stylesheet' />
+    <script src='~/js/main.min.js'></script>
+    <script src='~/js/locales-all.min.js'></script>
+
 <style>
 
     body {
