--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,17 +1,12 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="fa" dir="rtl">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - fullCalandar</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/fullCalandar.styles.css" asp-append-version="true" />
 
-
-    <link href='~/css/main.min.css' rel='stylesheet'/>
-    <script src='~/js/main.min.js'></script>
-    <script src='~/js/locales-all.min.js'></script>
 
 </head>
 <body>
