--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,22 +1,210 @@
-html {
-  font-size: 14px;
+﻿html {
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*ersian font*/
+@font-face {
+    font-family: Yekan Bakh;
+    font-style: normal;
+    font-weight: 100;
+    src: url('~/fonts/Yekan Bakh/woff/YekanBakhFaNum-Thin.woff') format('woff'), url('./assets/fonts/Yekan Bakh/woff2/YekanBakhFaNum-Thin.woff2') format('woff2');
+}
+
+@font-face {
+    font-family: Yekan Bakh;
+    font-style: normal;
+    font-weight: 300;
+    src: url('~/fonts/Yekan Bakh/woff/YekanBakhFaNum-Light.woff') format('woff'), url('./assets/fonts/Yekan Bakh/woff2/YekanBakhFaNum-Light.woff2') format('woff2');
+}
+
+@font-face {
+    font-family: Yekan Bakh;
+    font-style: normal;
+    font-weight: normal;
+    src: url('~/fonts/Yekan Bakh/woff/YekanBakhFaNum-Regular.woff') format('woff'), url('./assets/fonts/Yekan Bakh/woff2/YekanBakhFaNum-Regular.woff2') format('woff2');
+}
+
+@font-face {
+    font-family: Yekan Bakh;
+    font-style: normal;
+    font-weight: 600;
+    src: url('~/fonts/Yekan Bakh/woff/YekanBakhFaNum-SemiBold.woff') format('woff'), url('./assets/fonts/Yekan Bakh/woff2/YekanBakhFaNum-SemiBold.woff2') format('woff2');
+}
+
+@font-face {
+    font-family: Yekan Bakh;
+    font-style: normal;
+    font-weight: bold;
+    src: url('~/fonts/Yekan Bakh/woff/YekanBakhFaNum-Bold.woff') format('woff'), url('./assets/fonts/Yekan Bakh/woff2/YekanBakhFaNum-Bold.woff2') format('woff2');
+}
+
+@font-face {
+    font-family: Yekan Bakh;
+    font-style: normal;
+    font-weight: 800;
+    src: url('~/fonts/Yekan Bakh/woff/YekanBakhFaNum-ExtraBold.woff') format('woff'), url('./assets/fonts/Yekan Bakh/woff2/YekanBakhFaNum-ExtraBold.woff2') format('woff2');
+}
+
+@font-face {
+    font-family: Yekan Bakh;
+    font-style: normal;
+    font-weight: 900;
+    src: url('~/fonts/Yekan Bakh/woff/YekanBakhFaNum-Black.woff') format('woff'), url('./assets/fonts/Yekan Bakh/woff2/YekanBakhFaNum-Black.woff2') format('woff2');
+}
+
+@font-face {
+    font-family: Yekan Bakh;
+    font-style: normal;
+    font-weight: 950;
+    src: url('~/fonts/Yekan Bakh/woff/YekanBakhFaNum-ExtraBlack.woff') format('woff'), url('./assets/fonts/Yekan Bakh/woff2/YekanBakhFaNum-ExtraBlack.woff2') format('woff2');
+}
+
+
+
+
+/*English Regular font*/
+@font-face {
+    font-family: "Montserrat-Regular";
+    src: url("~/fonts/Montserrat/Montserrat-Regular/Montserrat-Regular.eot"); /* IE9*/
+    src: url("~/fonts/Montserrat/Montserrat-Regular/Montserrat-Regular.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("~/fonts/Montserrat/Montserrat-Regular/Montserrat-Regular.woff2") format("woff2"), /* chrome、firefox */
+    url("~/fonts/Montserrat/Montserrat-Regular/Montserrat-Regular.woff") format("woff"), /* chrome、firefox */
+    url("~/fonts/Montserrat/Montserrat-Regular/Montserrat-Regular.ttf") format("truetype"), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+    url("~/fonts/Montserrat/Montserrat-Regular/Montserrat-Regular.svg#Montserrat-Regular") format("svg"); /* iOS 4.1- */
+}
+
+
+/*English Bold font*/
+@font-face {
+    font-family: "Montserrat-Bold";
+    src: url("~/fonts/Montserrat/Montserrat Bold/Montserrat Bold.eot"); /* IE9*/
+    src: url("~/fonts/Montserrat/Montserrat Bold/Montserrat Bold.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+    url("~/fonts/Montserrat/Montserrat Bold/Montserrat Bold.woff2") format("woff2"), /* chrome、firefox */
+    url("~/fonts/Montserrat/Montserrat Bold/Montserrat Bold.woff") format("woff"), /* chrome、firefox */
+    url("~/fonts/Montserrat/Montserrat Bold/Montserrat Bold.ttf") format("truetype"), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+    url("~/fonts/Montserrat/Montserrat Bold/Montserrat Bold.svg#Montserrat-Regular") format("svg"); /* iOS 4.1- */
+}
+
+
+
+
+/*set persian font*/
+h1, h2, h3, h4, h5, h6, p, span, li, ul, button, input, del, a, label {
+    font-family: "Yekan Bakh", sans-serif !important;
+    font-size: 16px;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-stroke-width: 0.2px;
+    -moz-osx-font-smoothing: grayscale;
+    direction: rtl;
+}
+
+
+   /*set english font*/
+    p:lang(en_US), del:lang(en_US), span:lang(en_US), li:lang(en_US), ul:lang(en_US), h1:lang(en_US), h2:lang(en_US), h3:lang(en_US), h4:lang(en_US), h5:lang(en_US), h6:lang(en_US) {
+        font-family: "Montserrat-Regular", sans-serif !important;
+        font-style: normal;
+        -webkit-font-smoothing: antialiased;
+        -webkit-text-stroke-width: 0.2px;
+        -moz-osx-font-smoothing: grayscale;
+        direction: ltr;
+    }
+
+
+.fs-12 {
+    font-size: 12px;
+}
+
+.fs-14 {
+    font-size: 14px;
+}
+
+.fs-16 {
+    font-size: 16px;
+}
+
+.fs-18 {
+    font-size: 18px;
+}
+
+.fs-20 {
+    font-size: 20px;
+}
+
+.fs-22 {
+    font-size: 22px;
+}
+
+.fs-24 {
+    font-size: 24px;
+}
+
+.fs-26 {
+    font-size: 26px;
+}
+
+.fs-28 {
+    font-size: 28px;
+}
+
+.fs-30 {
+    font-size: 30px;
+}
+
+.fs-32 {
+    font-size: 32px;
+}
+
+.fs-34 {
+    font-size: 34px;
+}
+
+.fs-36 {
+    font-size: 36px;
+}
+
+.fs-38 {
+    font-size: 38px;
+}
+
+
+.fs-40 {
+    font-size: 40px;
+}
+
+
+.text-justify {
+    text-align: justify;
+    direction: rtl;
 }
